solc_ossfuzz_seed_corpus/test_sol/test_fb82e59272e9abfcbd384805b1ab01c9348ccfa78daec728092c9d935721e584_2e381c35f6f1178e4b1bdb1adbbc3f6691041afb_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(address i0,int64 i1)     returns(function (function (uint240) external   returns (address payable), bytes memory) external   returns (int208, function (address, uint144, string memory) external   returns (int96, bool)) o0,bytes memory o1,bytes25[1] memory o2)
{
}
contract C0 {
  modifier m0(bool i0,uint184 i1) virtual
  {
    _;
  }
  error er0(uint248 ep0, int24 ep1);
  event ev0(bool  ep0);
  bool public constant cons0 = (int208(0) <= ((int208(-186225590024584715622173166762479301432737615686831883516230652) + (int208(205688069665150755269371147819668813122841983204197482918576127) - int208(0))) | int208(205688069665150755269371147819668813122841983204197482918576127)));
  bool   s0 = false;
  error er1(bool ep0, int248 ep1);
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71,
    M72, M73, M74, M75, M76, M77, M78, M79,
    M80, M81, M82, M83, M84, M85, M86, M87,
    M88, M89, M90, M91, M92, M93, M94, M95,
    M96, M97, M98, M99, M100, M101, M102
  }
}
library L0 {
  modifier m1() 
  {
    _;
    assembly
    {
      switch mload(mod(0, 2048))
      case 0
      {
      }
      case 115792089237316195423570985008687907853269984665640564039457584007913129639935
      {
        switch mload(mod(80649985796102747896395877219153616464136391623278340166253071361843020607286, 2048))
        case 0
        {
          switch mul(calldataload(mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, calldatasize())), 5017774926040792149912137050991160794505689598219308067212190321646130586879)
          default
          {
          }
        }
        case 0
        {
        }
        case 66703664215000187435313220995780196666330758013444993190621595447601777804543
        {
          switch 0
          case 115792089237316195423570985008687907853269984665640564039457584007913129639935
          {
          }
          case 0
          {
            return(0, 115792089237316195423570985008687907853269984665640564039457584007913129639935)
            let al0 := 0
          }
          case 0
          {
          }
        }
        let al1 := 48115720167976645851582390086863469320248925998124400195732935625150180247760
      }
    }
  }
  function f1(address payable i0,function (uint240, int144[] memory, C0.EN0) external   returns (uint72, int216) i1) internal    returns(bytes25 o0,bytes4 o1)
  {
  }
  event ev1();
  function f2(function (string memory) external   returns (int128, address payable, bytes32) i0,function (bytes27, C0.EN0, bytes10) external   i1) internal   
  {
    revert("0d192bc57539537950d2003ac7f0f1ad");
  }
  function f3(address i0) public  m1() 
  {
    int152 l0 = ((int152(-1128741046093483214388055656008671231392989384) ** uint72(((uint72(4722366482869645213695) << uint24(uint24(0))) & uint72(4722366482869645213695)))) % int152(0));
    function (bool) internal   l1;
  }
  uint144 public constant cons1 = (((~((((uint144(4372711022154864258720581402963467082955067) >> uint48(uint48(0))) >> uint48(uint48(261323908286469))) - uint144(22300745198530623141535718272648361505980415)))) * uint144(18508246267603542714607035771568305060378799)) + uint144(22300745198530623141535718272648361505980415));
  error er2(address ep0);
  using L0 for *;
  event ev2(bytes  ep0, int160  ep1);
}
struct St0 {
  uint96 el0;
  int136 el1;
}
pragma solidity >= 0.0.0;
// ----
// Warning 9592: (su0.sol:1694-1939): "switch" statement with only a default case.
// DeclarationError 6792: (su0.sol:1958-1984): Duplicate case "0" defined.
// DeclarationError 6792: (su0.sol:2401-2431): Duplicate case "0" defined.
